Hopefully fix parallax on mobile

--- a/assets/sass/featured-works.sass
+++ b/assets/sass/featured-works.sass
@@ -2,6 +2,7 @@
   max-width: 1200px
   margin: auto
   padding: 1em 0
+  background: white
 
 .title__wrapper
   display: inline-flex
