--- a/assets/sass/landing.sass
+++ b/assets/sass/landing.sass
@@ -14,14 +14,18 @@
   position: absolute
   height: 100%
   width: 100%
-  background: url('../assets/background-large.jpg')
-  background-position: center
-  background-attachment: fixed
-  background-repeat: no-repeat
-  background-size: cover
   top: 0
   overflow: hidden
   z-index: -1
+
+.hero__img
+  position: fixed
+  height: 100%
+  width: 100%
+  background: url('../assets/background-large.jpg')
+  background-position: center
+  background-repeat: no-repeat
+  background-size: cover
 
 .hero__overlay
   height: 100%
